Make footer width fixed and reduce gap between cards

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -30,6 +30,8 @@ body {
 .sidebar {
   width: 300px;
   background: royalblue;
+  flex-shrink: 0;
+  padding: 16px;
 }
 
 .card {
@@ -50,10 +52,10 @@ body {
   display: flex;
   flex-wrap: wrap;
   padding: 32px;
-  gap: 32px;
 }
 
 ul a {
   text-decoration: none;
   color: #eee;
+  font-size: 24px;
 }
